renames library name in meta description

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -124,7 +124,7 @@ library.category=Hardware
 # like mentioning that it's a library. This should start with a capitalized 
 # letter, and end with a period.
 
-library.sentence=A wrapper for handling capacitive µTact sensors.
+library.sentence=A wrapper for handling capacitive Tact sensors.
 
 
 # Additional information suitable for the Processing website. The value of
