--- a/resources/build.properties
+++ b/resources/build.properties
@@ -64,7 +64,7 @@ java.target.version=1.6
 
 # Set the description of the Ant build.xml file.
 
-ant.description=ProcessingLibs Ant build file.
+ant.description=tact-processing Ant build file.
 
 
 
@@ -84,7 +84,7 @@ project.prettyName=Tact
 # 'normal' will compile the distribution including the javadoc-reference and all
 # web-files (the compile process here takes longer).
 
-project.compile=fast
+project.compile=normal
 
 # All files compiled with project.compile=normal are stored 
 # in the distribution folder.
@@ -152,12 +152,12 @@ library.version=1
 
 
 # The version as the user will see it. 
-library.prettyVersion=0.1
+library.prettyVersion=0.0.1
 
 
-library.copyright=(c) 2013
+library.copyright=(c) Studio NAND, 2013
 library.dependencies=
-library.keywords=capacitive sensing
+library.keywords=capacitive sensing touch sensor
 
 tested.platform=osx,windows
 tested.processingVersion=2.0
